<resources>
    <string name="app_name">Planet Quiz App</string>
    <string name="q1">Q1 - How many planets are there in our solar system?</string>
    <string name="q1_a">Eight</string>
    <string name="q1_b">Nine</string>
    <string name="q1_c">Ten</string>
    <string name="q1_d">Eleven</string>
    <string name="q2">Q2 - How long does it take for light from the Sun to reach Earth ?</string>
    <string name="q2_a">1 minute</string>
    <string name="q2_b">8 minutes</string>
    <string name="q2_c">Instantaneous</string>
    <string name="q2_d">24 hours</string>
    <string name="q3">Q3 - Name of our planet is ?</string>
    <string name="q4">Q4 - Name of natural satellite of earth ?</string>
    <string name="q5">Q5 - Planets bigger than earth ?</string>
    <string name="q5_a">Jupiter</string>
    <string name="q5_b">Mercury</string>
    <string name="q5_c">Uranus</string>
    <string name="q5_d">Venus</string>
    <string name="q6">Q6 - Name of planets which have natural satellites?</string>
    <string name="q6_a">Mercury</string>
    <string name="q6_b">Venus</string>
    <string name="q6_c">Earth</string>
    <string name="q6_d">Mars</string>
    <string name="submitQuiz">Submit</string>
    <string name="hint_text">write your answer here</string>
</resources>
