<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:layout_marginLeft="@dimen/layout_margin"
        android:layout_marginRight="@dimen/layout_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q1"
            android:theme="@style/QuestionView" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:theme="@style/RadioGroupView">

            <RadioButton
                android:id="@+id/q1_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_a" />

            <RadioButton
                android:id="@+id/q1_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_b" />

            <RadioButton
                android:id="@+id/q1_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_c" />

            <RadioButton
                android:id="@+id/q1_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_d" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q2"
            android:theme="@style/QuestionView" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:theme="@style/RadioGroupView">

            <RadioButton
                android:id="@+id/q2_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_a" />

            <RadioButton
                android:id="@+id/q2_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_b" />

            <RadioButton
                android:id="@+id/q2_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_c" />

            <RadioButton
                android:id="@+id/q2_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_d" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3"
            android:theme="@style/QuestionView" />

        <EditText
            android:id="@+id/q3_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextView"
            android:hint="@string/hint_text"
            android:textColor="@android:color/white"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q4"
            android:theme="@style/QuestionView" />

        <EditText
            android:id="@+id/q4_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextView"
            android:hint="@string/hint_text"
            android:textColor="@android:color/white"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q5"
            android:theme="@style/QuestionView" />


        <CheckBox
            android:id="@+id/q5_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q5_a"/>

        <CheckBox
            android:id="@+id/q5_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q5_b"/>

        <CheckBox
            android:id="@+id/q5_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q5_c"/>

        <CheckBox
            android:id="@+id/q5_d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q5_d"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q6"
            android:theme="@style/QuestionView" />


        <CheckBox
            android:id="@+id/q6_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q6_a"/>

        <CheckBox
            android:id="@+id/q6_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q6_b" />

        <CheckBox
            android:id="@+id/q6_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q6_c"/>

        <CheckBox
            android:id="@+id/q6_d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q6_d"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/layout_margin"
            android:layout_marginTop="@dimen/layout_margin"
            android:padding="@dimen/padding"
            android:background="@color/colorAccent"
            android:onClick="submitQuiz"
            android:text="@string/submitQuiz"
            android:textSize="@dimen/button_text_size"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>
